Trying to fix the SVGs on mobile Safari

--- a/styles/index-common.css
+++ b/styles/index-common.css
@@ -165,6 +165,7 @@
     display: inline-block;
     width: 48px;
     height: 48px;
+    vertical-align: middle;
 }
 
 .img-link {
